# fenris-rs

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  coverage.yml  release.yml  security.yml
benchmarks/: Cargo.toml  README.md
benchmarks/benches/: core_layers.rs
benchmarks/src/: lib.rs
client/: Cargo.toml
client/src/: app.rs  batch.rs  client.rs  connection_manager.rs  main.rs  request_manager.rs  response_manager.rs
client/src/ui/: components.rs  mod.rs  terminal.rs
client/src/ui/screens/: command.rs  connection.rs  help.rs  mod.rs
common/: Cargo.toml  build.rs
common/src/: compression.rs  config.rs  crypto.rs  domain.rs  error.rs  file_ops.rs  framing.rs  identity.rs  lib.rs  network.rs  proto.rs  protocol.rs  secure_channel.rs  storage.rs
docs/: Architecture.md
proto/: fenris.proto
server/: Cargo.toml
server/src/: client_info.rs  config.rs  connection.rs  lib.rs  main.rs  request_handler.rs  server.rs
