[workspace]
members = [
    "common",
    "client", 
    "server",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

anyhow = "1.0"
thiserror = "1.0"


prost = "0.12"
bytes = "1.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0