[package]
name = "client"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "client"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }


ratatui = "0.30"
crossterm = "0.29"

clap = { version = "4.4", features = ["derive"] }

tokio = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

anyhow = { workspace = true }

prost = { workspace = true }
bytes = { workspace = true }

chrono = "0.4"