[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = { workspace = true }
anyhow = { workspace = true }

aes-gcm = "0.10"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"

flate2 = "1.0"

async-trait = "0.1"

tokio = { workspace = true }

tracing = { workspace = true }

prost = { workspace = true }
bytes = { workspace = true }
tempfile = "3.8"

[build-dependencies]
prost-build = "0.14"
