[package]
name = "server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }

tokio = { workspace = true }

tokio-util = "0.7"

dashmap = "5.5"

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

anyhow = { workspace = true }

clap = { version = "4.4", features = ["derive"] }

prost = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
async-trait = "0.1"

[lib]
name = "server"
path = "src/lib.rs"
